only minor changes

--- a/presentations/multimodal-CLIP/acl2020.bib
+++ b/presentations/multimodal-CLIP/acl2020.bib
@@ -15,17 +15,20 @@
       primaryClass={cs.CV}
 }
 @inproceedings{raganato-etal-2023-semeval,
-    title = "{S}em{E}val-2023 {T}ask 1: {V}isual {W}ord {S}ense {D}isambiguation",
+    title = "{S}em{E}val-2023 Task 1: Visual Word Sense Disambiguation",
     author = "Raganato, Alessandro  and
-      Calixto, Iacer and
-      Ushio, Asahi and
+      Calixto, Iacer  and
+      Ushio, Asahi  and
       Camacho-Collados, Jose  and
       Pilehvar, Mohammad Taher",
-    booktitle = "Proceedings of the 17th International Workshop on Semantic Evaluation (SemEval-2023)",
+    booktitle = "Proceedings of the The 17th International Workshop on Semantic Evaluation (SemEval-2023)",
     month = jul,
     year = "2023",
     address = "Toronto, Canada",
     publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2023.semeval-1.308",
+    pages = "2227--2234",
+    abstract = "This paper presents the Visual Word Sense Disambiguation (Visual-WSD) task.The objective of Visual-WSD is to identify among a set of ten images the one that corresponds to the intended meaning of a given ambiguous word which is accompanied with minimal context. The task provides datasets for three different languages: English, Italian, and Farsi.We received a total of 96 different submissions. Out of these, 40 systems outperformed a strong zero-shot CLIP-based baseline.Participating systems proposed different zero- and few-shot approaches, often involving generative models and data augmentation.More information can be found on the task{'}s website: {\textbackslash}url{https://raganato.github.io/vwsd/}.",
 }
 
 @misc{akkus2023multimodal,
@@ -132,6 +135,15 @@ doi = {10.1109/CVPR.2010.5540112}
       author={Aditya Ramesh and Mikhail Pavlov and Gabriel Goh and Scott Gray and Chelsea Voss and Alec Radford and Mark Chen and Ilya Sutskever},
       year={2021},
       eprint={2102.12092},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV}
+}
+
+@misc{li2022blip,
+      title={BLIP: Bootstrapping Language-Image Pre-training for Unified Vision-Language Understanding and Generation}, 
+      author={Junnan Li and Dongxu Li and Caiming Xiong and Steven Hoi},
+      year={2022},
+      eprint={2201.12086},
       archivePrefix={arXiv},
       primaryClass={cs.CV}
 }
